# DesignPattern

./: .gitignore  README.md
Adapter/: Adapter.cpp  adapter
Iterator/sample/: CMakeLists.txt  README.md  main.cpp
Iterator/sample/UML/: class_Iterator.drawio
Iterator/sample/include/: Aggregate.h  Book.h  BookShelf.h  BookShelfIterator.h  Iterator_BC.h
Iterator/sample/src/: BookShelf.cpp
